--- a/sample_config.env
+++ b/sample_config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "5569683777:AAEZ_6LIevxeZKVL0ctP0Ap7arLW-LnXO9E"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 6202007
+API_HASH = "495e06b82ccfc8bb104849d43c44b454"
+OWNER_ID = 1729348162
+AUTH_CHANNEL = "-1001712179335" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 #__________NOT COMPULSORY___________
 
@@ -23,8 +23,8 @@ EDIT_SLEEP_TIME_OUT = "15"
 MAX_TIME_TO_WAIT_FOR_TORRENTS_TO_START = 600
 MAX_TG_SPLIT_FILE_SIZE = "2097152000"
 
-FINISHED_PROGRESS_STR = "" #Progress Display
-UN_FINISHED_PROGRESS_STR = "" #Progress Display
+FINISHED_PROGRESS_STR = "🌍" #Progress Display
+UN_FINISHED_PROGRESS_STR = "🚀" #Progress Display
 
 CUSTOM_FILE_NAME = "" # Adds Prefix to Every which is Leeched 
 
